[package]
name = "reload"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/BillyDM/baseplug.git", rev = "c7b6ae698c4d027288583563b7f3d0b3add2b117" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview.git", rev = "a5956c96b5938b68b2bed8bcdfe0016ea66d119f" }
egui = "0.13"
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.3"
vst = "0.2"

dirs = "3"
log = "0.4"
log-panics = "2"
simplelog = "0.8"

libloading = "0.7"

rand = "0.8.4"

ron = "0.6"

