[package]
name = "reload"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseplug = { git = "https://github.com/DGriffin91/baseplug.git"}
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview.git", rev = "a5956c96b5938b68b2bed8bcdfe0016ea66d119f" }
egui = "0.13"
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.3"
vst = "0.2"
keyboard-types = { version = "0.5.0", default-features = false }

dirs = "3"
log = "0.4"
log-panics = "2"
simplelog = "0.8"

libloading = "0.7"

rand = "0.8.4"

ron = "0.6"

ringbuf = "0.2.6"

